--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "mongojs": "^3.1.0",
     "mongoose": "^5.11.2"
   }
 }
